--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,7 +16,7 @@
 </div>
 <div class="button-group">
     <button class="wishlist-button">İstek Listesi</button>
-    <a href="/search" class="search-button">Arama Yap</a>
+    <a href="/search" class="search-button">Oyun Ara</a>
     <button class="cart-button">Sepetim</button>
 </div>
 
